--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ email-validator==2.3.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.5
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -47,6 +48,7 @@ sentry-sdk==2.35.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.47.3
 typer==0.16.1
 typing-inspection==0.4.1
