--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+antiorm==1.2.1
 anyio==4.10.0
 bcrypt==4.3.0
 certifi==2025.8.3
@@ -6,6 +7,8 @@ cffi==1.17.1
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.6
+db==0.1.1
+db-sqlite3==0.0.1
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
