--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: .
+        working-directory: backend
 
     steps:
       - name: 1. Checkout do Repositório
@@ -24,16 +24,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13.7"
-      
-      - name: 3. Acessar o diretório backend
-        run: |
-          cd backend
 
-      - name: 4. Instalar Dependências (Etapa de Build)
+      - name: 3. Instalar Dependências (Etapa de Build)
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 5. Rodar Testes Automatizados (Etapa de Teste)
+      - name: 4. Rodar Testes Automatizados (Etapa de Teste)
         run: |
           pytest -vv
