--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,6 +39,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
