--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -49,6 +49,7 @@ rich-toolkit==0.15.0
 rignore==0.6.4
 rsa==4.9.1
 sentry-sdk==2.35.1
+setuptools==78.1.1
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -60,5 +61,7 @@ typing_extensions==4.15.0
 ujson==5.11.0
 urllib3==2.5.0
 uvicorn==0.35.0
+uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
+wheel==0.45.1
