fix/inclusao-env-no-ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,5 @@ jobs:
 
       - name: 4. Rodar Testes Automatizados (Etapa de Teste)
         run: |
+          cp .env.example .env
           pytest -vv --log-cli-level=INFO
